--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -43,9 +43,8 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 #*: What cares must then '''attend''' the toiling swain.
 #* {{quote-book|en|year=1922| author={{w|Ben Travers}}| chapter=5| title=[http://openlibrary.org/works/OL1521052W A Cuckoo in the Nest]| passage=The most rapid and most seductive transition in all human nature is that which '''attends''' the palliation of a ravenous appetite. There is something humiliating about it.{{...}}Can those harmless but refined fellow-diners be the selfish cads whose gluttony and personal appearance so raised your contemptuous wrath on your arrival?}}
 # To wait for; to await; to remain, abide, or be in store for.
+#* {{RQ:Dryden The Indian Emperour|29|III|ii|passage=Three days I promiſ’d to '''attend''' my Doom.}}
 #* {{RQ:Locke Human Understanding|text=the different state of perfect happiness or misery that '''attends''' all men after this}}
-#* {{RQ:Dryden The Indian Emperor}}
-#*: Three days I promised to '''attend''' my doom.
 
 =====Synonyms=====
 * {{sense|listen to}} {{l|en|behear}}, {{l|en|heed}}, {{l|en|mark}}, {{l|en|notice}}
