t+ja:[[物件]] t-balance t+ru:[[предмет]] t+ru:[[нечто]] t+uk:[[щось]] t+uk:[[дещо]] t+uk:[[предмет]] t+be:[[прадмет]] t+be:[[штосьці]] t+be:[[штось]] t+be:[[нешта]] ([[WT:EDIT|Assisted]]) <thing#67396634>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -225,7 +225,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Irish: {{t|ga|rud|m}}, {{t|ga|ní|m}}
 * Italian: {{t+|it|cosa|f}}
 * Jamaican Creole: {{t|jam|ting}}
-* Japanese: {{t+|ja|物|tr=もの, mono}}
+* Japanese: {{t+|ja|物|tr=もの, mono}}, {{t+|ja|物件|tr=ぶっけん, bukken}}
 * Kabyle: {{t|kab|taɣawsa|f}}
 * Kannada: {{t+|kn|ವಸ್ತು}}
 * Karakhanid: {{t|xqa|نانْكْ|tr=nēŋ}}
@@ -234,8 +234,8 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Korean: {{t+|ko|물건(物件)}}, {{t+|ko|것}}
 * Kyrgyz: {{t+|ky|нерсе}}
 * Ladin: {{t|lld|cossa|f}}
-* Ladino: {{t|lad|koza}}
 {{trans-mid}}
+* Ladino: {{t|lad|koza}}
 * Lao: {{t|lo|ສິ່ງ}}
 * Latin: {{t+|la|rēs|f}}, {{t+|la|ens|n}}
 * Latvian: {{t|lv|lieta}}
@@ -318,6 +318,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 {{trans-bottom}}
 
 {{trans-top|word, symbol, sign, or other referent that can be used to refer to any entity}}
+* Belarusian: {{t|be|што́сьці|n}}, {{t|be|штось|n}}, {{t|be|не́шта|n}}
 * Bulgarian: {{t+|bg|не́що|n}}
 * Finnish: {{t+|fi|tarkoite}}
 * French: {{t-needed|fr}}
@@ -325,18 +326,23 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 {{trans-mid}}
 * Indonesian: {{t+|id|sesuatu}}
 * Polish: {{t+|pl|coś|n}}
+* Russian: {{t+|ru|не́что|n}}
+* Ukrainian: {{t+|uk|щось|n}}, {{t|uk|де́що|n}}
 {{trans-bottom}}
 
 {{trans-top|individual object or distinct entity}}
 * Asturian: {{t+|ast|cosa|f}}
+* Belarusian: {{t+|be|прадме́т|m}}
 * Bulgarian: {{t+|bg|предме́т|m}}
 * Cebuano: {{t|ceb|butang}}
 * Finnish: {{t+|fi|esine}}
-{{trans-mid}}
 * Hungarian: {{t|hu|létező dolog}}
+{{trans-mid}}
 * Indonesian: {{t+|id|benda}}
 * Latin: {{t+|la|res|f}}
+* Russian: {{t+|ru|предме́т|m}}
 * Tocharian B: {{t|txb|wreme}}
+* Ukrainian: {{t+|uk|предме́т|m}}
 {{trans-bottom}}
 
 {{trans-top|law: whatever can be owned}}
