--- a/en/p/pusillanimity.741240.wikitext
+++ b/en/p/pusillanimity.741240.wikitext
@@ -10,7 +10,7 @@
 # The quality or state of being [[pusillanimous]]; the [[vice]] of being [[timid]] and [[cowardly]], and thus not living up to one's full [[potential]]; [[pusillanimousness]].
 #* '''1685'''. [[w:Miguel de Molinos|Dr. Michael de Molinos]]: ''The Spiritual Guide which Disentangles the Soul, and Brings it by the Inward Way To The Getting of Perfect Contemplation and the Rich Treasure of Internal Peace'', CHAP. XVIII: [http://www.ccel.org/ccel/molinos/guide.html].
 #*: 132. And although thou often fallest, and seest thy '''Pusillanimity''', and endeavour to get courage, and afflict not thy self; because what God doth not do in forty Years, he sometimes doth in an instant, with a particular Mystery, that we may live low and humble, and know that ‘tis the Work of his powerful Hand, to free us from Sins.
-#* '''1776''' {{w|William Gibbon}}, ''The History of the Decline and Fall of the Roman Empire'', Vol I, ch 1—pt iii:
+#* '''1776''' {{w|Edward Gibbon}}, ''The History of the Decline and Fall of the Roman Empire'', Vol I, ch 1—pt iii:
 #*: Instead of being confined within the walls of fortified cities, which the Romans considered as the refuge of weakness or '''pusillanimity''', the legions were encamped on the banks of the great rivers, and along the frontiers of the barbarians.
 #* {{RQ:Irving History of New York|passage=their hectorings against an absent enemy, and their '''pusillanimity''' on his approach}}
 #* '''1872''', [[w:Henry James|Henry James]], "Guest's Confession" in ''The Atlantic Monthly'' October 1872.
