--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -2,10 +2,9 @@
 ==English==
 {{wikipedia}}
 
-Yey bisok libur
-Yey bisok libur 
-Yey bisok libur
-Yey bisok libur
+===Alternative forms===
+* {{l|en|agen}}, {{l|en|againe}}, {{l|en|agayne}}, {{l|en|ageyne}} {{qualifier|all obsolete}}
+* {{l|en|agin}}, {{l|en|ag'in}} {{qualifier|colloquial, dialectal or humorous}}
 
 ===Etymology===
 From {{inh|en|enm|agayn}}, {{m|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|anȝen}}, from {{inh|en|ang|āġēan}}, {{m|ang|onġēan}}, {{m|ang|onġeġn||towards, against, opposite to, contrary to, against, in exchange for, opposite, back, again, anew, also}}. Cognate with {{cog|da|igen||again}}, {{cog|sv|igen||again}}, and {{cog|nb|igjen||again}}.
