--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -89,6 +89,7 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 * Thai: {{t|th|นินเทนโด|tr=Ninthendo}}
 * Uyghur: {{t|ug|نىنتېندو}}
 * Vietnamese: {{t|vi|Nintendo}}
+* Yiddish: {{t|yi|נינטענדאָו}}
 {{trans-bottom}}
 
 [[Category:English trademarks]]
