--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -819,3 +819,15 @@ From {{inh|gd|sga|millid|t=spoils, ruins, destroys}}
 
 ===References===
 * State Library of Queensland, [https://www.slq.qld.gov.au/sites/default/files/0007-267289-turubul-body-parts-2_0.pdf Indigenous Language Wordlists Turubul Body Parts].
+
+----
+==Yola==
+ 
+===Noun===
+{{head|yol|noun}}
+ 
+# {{alt form|yol|mile}} 
+#* {{quote-book|yol|year=1927|chapter=ZONG O DHREE YOLA MYTHENS|line=19|title=THE ANCIENT DIALECT OF THE BARONIES OF FORTH AND BARGY, COUNTY WEXFORD|passage=A '''mill'''.|translation=A '''mill'''.}}
+ 
+===References===
+* {{R:Browne 1927|page=131}}
