--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -533,7 +533,7 @@ From {{inh|enm|ang|þing}}, from {{inh|enm|gmw-pro|*þing}}, from {{inh|enm|gem-
 ====Descendants====
 * {{desc|en|thing}}
 * {{desc|sco|thing}}, {{l|sco|ting}}, {{l|sco|hing}}
-* {{desc|yol|dhing|thing}}
+* {{desc|yol|dhing|alts=1}}
 
 ====References====
 * {{R:MED Online|entry=thing|pos=n|id=MED45301}}
