--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -123,7 +123,7 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 {{trans-bottom}}
 
 {{trans-top|act of whistling}}
-* Assamese: {{t|as|সুহুৰি}}
+* Assamese: {{t|as|সুহুৰি}}, {{t|as|উকি}} {{q|loud}}
 * Asturian: {{t|ast|xiblíu|m}}, {{t|ast|xiblida|f}}
 * Belarusian: {{t|be|свіст|m}}
 * Bulgarian: {{t+|bg|свирене|n}}
@@ -166,6 +166,7 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 
 {{trans-top|sound made by whistling}}
 * Armenian: {{t+|hy|սուլոց}}
+* Assamese: {{t|as|সুহুৰি}}, {{t|as|উকি}} {{q|loud}}
 * Breton: {{t+|br|c'hwitelladenn|f}}, {{t+|br|c'hwitelladennoù|p}}
 * Catalan: {{t+|ca|xiulada|f}}
 * Chinese:
