--- a/en/p/Pax Romana.855978.wikitext
+++ b/en/p/Pax Romana.855978.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{bor|en|la|-}}. {{coin|en|Edward Gibbon|nobycat=1}}.
+{{lbor|en|la|[[pax]] [[Rōmāna]]|lit=Roman peace}}, {{coin|en|Edward Gibbon|nocap=1|nobycat=1}}.
 
 ===Proper noun===
 {{en-proper noun|head=Pax Romana}}
