--- a/en/p/Pax Americana.855982.wikitext
+++ b/en/p/Pax Americana.855982.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Etymology===
-{{bor|en|la|-}}, {{lit|American Peace|nocap=1}}, by analogy with {{m|en|Pax Romana}}.
+{{lbor|en|la|[[pax]] [[americāna]]|lit=American peace}}, modeled on {{m|en|Pax Romana}}.
 
 ===Proper noun===
 {{en-proper noun}}
