/* See also */ <Pax Romana#67449117>

--- a/en/p/Pax Romana.855978.wikitext
+++ b/en/p/Pax Romana.855978.wikitext
@@ -7,9 +7,12 @@
 {{en-proper noun|head=Pax Romana}}
 
 # {{lb|en|historical}} The long period of relative peace and minimal expansion by military force experienced by the Roman Empire between 27 BC and 180 AD.
+#: {{syn|en|Pax Augusta}}
 
-====Synonyms====
-* [[Pax Augusta]]
+====See also====
+* {{l|en|Pax Americana}}
+* {{l|en|Pax Britannica}}
+* {{l|en|Pax Sinica}}
 
 ===Further reading===
 * {{pedia}}
