--- a/en/r/recommencement.741536.wikitext
+++ b/en/r/recommencement.741536.wikitext
@@ -6,3 +6,10 @@ From {{uder|en|frm|recommencement}}, from {{uder|en|fro|-}}
 ===Noun===
 {{en-noun}}
 # The act of [[recommence|recommencing]]; a second or subsequent [[commencement]].
+----
+==French==
+
+===Noun===
+{{fr-noun|m}}
+
+# [[restart]]
