/* English */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <car-hop#67450831>

--- a/en/c/car-hop.775052.wikitext
+++ b/en/c/car-hop.775052.wikitext
@@ -2,10 +2,9 @@
 ==English==
 
 ===Noun===
-{{head|en|noun}}
+{{en-noun}}
 
-# {{attributive form of|en|car hop|nodot=1}}
-#: ''He was wearing standard '''car-hop''' attire.''
+# {{alternative form of|en|car hop|nodot=1}}
 
 ===Anagrams===
 * {{anagrams|en|a=achopr|Chopra|coprah|paroch}}
