t+id:[[aplikatif]] ([[WT:EDIT|Assisted]]) <applicative#67498046>

--- a/en/a/applicative.745849.wikitext
+++ b/en/a/applicative.745849.wikitext
@@ -13,6 +13,7 @@ From {{m|en|applicate}}.
 ====Translations====
 {{trans-top|having practical application}}
 * French: {{t+|fr|applicatif}}
+* Indonesian: {{t+|id|aplikatif}}
 * Italian: {{t+|it|applicativo}}
 {{trans-mid}}
 * Portuguese: {{t+|pt|aplicativo}}
