--- a/en/c/car-hop.775052.wikitext
+++ b/en/c/car-hop.775052.wikitext
@@ -4,7 +4,8 @@
 ===Noun===
 {{en-noun}}
 
-# {{alternative form of|en|car hop|nodot=1}}
+# {{alternative form of|en|car hop}}
+# {{attributive form of|en|car hop}}
 
 ===Anagrams===
 * {{anagrams|en|a=achopr|Chopra|coprah|paroch}}
