--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -164,7 +164,8 @@ From {{inh|en|enm|plege}}, from {{der|en|xno|plege}}, from {{der|en|fro|plege}} 
 * Bengali: {{t|bn|জামানত}}, {{t|bn|জমানত}}
 * Bulgarian: {{t+|bg|зало́г|m}}
 * Catalan: {{t+|ca|penyora|f}}
-* Chinese: {{t+|zh|質權}}, {{t+|zh|质权|tr=zhìquán}}
+* Chinese:
+*: Mandarin: {{t+|zh|質權}}, {{t+|zh|质权|tr=zhìquán}}
 * Danish: {{t|da|pant|n}}
 * Dutch: {{t+|nl|pand|n}}
 * Finnish: {{t+|fi|pantti}}
