t+zza:[[çi]] t+zza:[[hımın]] t+zza:[[mal]] t+zza:[[wêr]] t+zza:[[wahêr]] t+zza:[[qal]] t+zza:[[pırtı]] t+zza:[[dıbare]] t+zza:[[mahluk]] t+zza:[[cınawır ]] ([[WT:EDIT|Assisted]]) <thing#67526341>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -314,6 +314,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Yagnobi: {{t|yai|чиз}}
 * Yiddish: {{t|yi|זאַך|f}}
 * Yoruba: {{t|yo|ohun}}, {{t|yo|n̄ǹkan}}, {{t|yo|kiní}}
+* Zazaki: {{t|zza|çi}}, {{t|zza|hımın}}
 * Zhuang: {{t|za|doxgaiq}}, {{t|za|doenghyiengh}}
 {{trans-bottom}}
 
@@ -349,6 +350,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Finnish: {{t+|fi|esine}}
 {{trans-mid}}
 * Turkish: {{t+|tr|mal}}
+* Zazaki: {{t|zza|mal}}, {{t|zza|wêr}}, {{t|zza|wahêr}}
 {{trans-bottom}}
 
 {{trans-top|law: corporeal object}}
@@ -366,6 +368,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Finnish: {{t+|fi|juttu}}
 {{trans-mid}}
 * Swedish: {{t+|sv|grej|c}}
+* Zazaki: {{t|zza|qal}}, {{t|zza|pırtı}}
 {{trans-bottom}}
 
 {{trans-top|clothes, possessions or equipment}}
@@ -387,6 +390,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Hungarian: {{t+|hu|gond}}, {{t+|hu|probléma}}
 * Indonesian: {{t+|id|masalah}}
 * Malayalam: {{t+|ml|കാര്യം}}
+* Zazaki: {{t|zza|dıbare}}
 {{trans-bottom}}
 
 {{trans-top|penis}}
@@ -399,6 +403,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Malayalam: {{t+|ml|സാധനം}} {{qualifier|slang}}, {{t|ml|സുന}} {{qualifier|slang}}
 * Serbo-Croatian: {{t+|sh|onaj|alt=ona}} {{t+|sh|stvar|f}} (in this slang sense, always used with demonstrative pronoun 'ona')
 * Turkish: {{t+|tr|şey}}
+* Zazaki: {{t|zza|hımın}}
 {{trans-bottom}}
 
 {{trans-top|living being or creature}}
@@ -410,6 +415,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Indonesian: {{t+|id|makhluk}}
 * Japanese: {{t+|ja|生き物|tr=いきも​の, ikimono}}
 * Turkish: {{t+|tr|mahluk}}
+* Zazaki: {{t|zza|mahluk}}, {{t|zza|cınawır }}
 {{trans-bottom}}
 
 {{trans-top|that which matters; the crux}}
