--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -75,6 +75,8 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 # {{lb|en|US|military|slang}} The general-purpose M60 [[machine gun]], considered to be heavy and bulky.
 #: {{ux|en|Unfortunately, the M60 is about twenty-four pounds and is very unbalanced. You try carrying the '''pig''' around the jungle and see how you feel.}}
 # {{lb|en|uncountable}} A simple [[dice]] [[game]] in which players roll the dice as many times as they like, either accumulating a greater score or losing previous points gained.
+# {{lb|en|UK|slang|obsolete}} A [[sixpence]].
+#: {{syn|en|sow's baby}}
 
 =====Hyponyms=====
 * {{sense|mammal of genus Sus}} {{l|en|boar}}, {{l|en|herd boar}}; [[sow]], [[brood sow]]; [[piglet]], [[piggy]]
