--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -13,7 +13,7 @@ Compare {{cog|cy|benn||cart}}, {{cog|la|offendīx||knot, band}}, {{cog|lt|beñdr
 * {{rhymes|en|aɪnd|s=1}}
 
 ===Verb===
-{{en-verb|binds|binding|bound|past_ptc2=bounden|past_ptc2_qual=archaic, rare}}
+{{en-verb|||bound|past2=binded|past2_qual=nonstandard|past_ptc2=binded|past_ptc2_qual=nonstandard|past_ptc3=bounden|past_ptc3_qual=archaic, rare}}
 
 # {{lb|en|intransitive}} To tie; to confine by any [[ligature]].
 #* {{RQ:Shakespeare As You Like It|III|ii|passage=They that reap must sheaf and '''bind'''.}}
@@ -63,7 +63,7 @@ Compare {{cog|cy|benn||cart}}, {{cog|la|offendīx||knot, band}}, {{cog|lt|beñdr
 # {{lb|en|transitive|computer programming}} To process one or more object modules into an executable program.
 # {{lb|en|UK|dialect}} To [[complain]]; to [[whine]] about something.
 #* {{quote-book|en|year=1980|author=Iris Murdoch|title=Nuns And Soldiers|passage="But it's not much good piling up the pix if I can't sell them."<br>"Oh do stop '''binding'''. Think of something. How will we eat, where will we sleep?"}}
-# {{lb|en|intransitive||LGBT}} To wear a [[binder]] so as to flatten one's chest to give the appearance of a flat chest, usually done by trans men.
+# {{lb|en|intransitive||LGBT}} To [[wear]] a [[binder]] so as to [[flatten]] one's [[chest]] to give the [[appearance]] of a [[flat]] chest, usually done by [[trans man|trans men]].
 #: {{ux|en|I haven't '''binded''' since I got my top surgery.}}
 
 ====Derived terms====
