--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -268,6 +268,7 @@ Compare {{cog|cy|benn||cart}}, {{cog|la|offendīx||knot, band}}, {{cog|lt|beñdr
 
 [[Category:English class 3 strong verbs]]
 [[Category:English irregular verbs]]
+[[Category:en:Transgender]]
 
 ----
 
