--- a/en/u/uniformize.776390.wikitext
+++ b/en/u/uniformize.776390.wikitext
@@ -31,7 +31,7 @@
 {{trans-bottom}}
 
 {{trans-top|(mathematics)}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t|fi|uniformisoida}}
 * German: {{t|de|uniformisieren}}
 {{trans-mid}}
 * Polish: {{t-needed|pl}}
