--- a/en/u/uniformize.776390.wikitext
+++ b/en/u/uniformize.776390.wikitext
@@ -34,7 +34,7 @@
 * Finnish: {{t|fi|uniformisoida}}
 * German: {{t|de|uniformisieren}}
 {{trans-mid}}
-* Polish: {{t-needed|pl}}
+* Polish: {{t+|pl|[[czynić]] [[równomierny]]m|impf}}
 {{trans-bottom}}
 
 ====See also====
