--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -20,7 +20,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 ====Noun====
 {{en-noun|~}}
 
-# Any of several intelligent [[mammalian]] species of the genus ''[[Sus]]'', having [[cloven]] [[hooves]], [[bristle]]s and a [[nose]] adapted for [[digging]]; especially the [[domestication|domesticated]] [[animal]] ''Sus domesticus''.
+# Any of several [[mammalian]] species of the genus ''[[Sus]]'', having [[cloven]] [[hooves]], [[bristle]]s and a [[nose]] adapted for [[digging]]; especially the [[domestication|domesticated]] [[animal]] ''Sus domesticus''.
 #: {{syn|en|Thesaurus:pig}}
 #: {{ux|en|The man kept a pen with two '''pigs''' that he fed everything from carrots to cabbage.}}
 #* {{RQ:Kingsley Westward Ho|volume=II|chapter=How Salvation Yeo Slew the King of the Gubbings|page=113|passage={{...}}and at the back a rambling courtledge of barns and walls, around which '''pigs''' and bare-foot children grunted in loving communion of dirt.}}
