correct language code in, and usage of, etymology template(s) using [[Project:AWB|AWB]] <abandonar#67562416>

--- a/en/a/abandonar.4113.wikitext
+++ b/en/a/abandonar.4113.wikitext
@@ -1,7 +1,7 @@
 ==Asturian==
 
 ===Etymology===
-Probably borrowed from {{bor|ast|es|abandonar}}, from {{bor|es|fr|abandonner}}, from {{der|es|gem-pro|*bannaną}}.
+Probably borrowed from {{bor|ast|es|abandonar}}, from {{der|ast|fr|abandonner}}, from {{der|ast|gem-pro|*bannaną}}.
 
 ===Pronunciation===
 {{ast-IPA}}
@@ -108,7 +108,7 @@ Borrowed from {{bor|io|en|abandon}}, {{bor|io|fr|abandonner}}, {{bor|io|it|abban
 
 ===Etymology===
 {{root|lad|ine-pro|*bʰeh₂-|id=speak}}
-From {{der|lad|fro|abandoner}}, formed from {{m|fro|à|a|t=at, to}} + {{m|fro|bandon|t=jurisdiction, control}}, from {{der|pt|LL.|bannum|t=proclamation}}, {{m|la|bannus}}, {{m|la|bandum}}, from {{der|pt|frk|*ban}}, {{m|gmw-pro|*bann}}, from {{der|pt|gem-pro|*bannaną|t=to proclaim, command}}, from {{der|pt|ine-pro|*bʰeh₂-|t=to speak}}.
+From {{der|lad|fro|abandoner}}, formed from {{m|fro|à|a|t=at, to}} + {{m|fro|bandon|t=jurisdiction, control}}, from {{der|lad|LL.|bannum|t=proclamation}}, {{m|la|bannus}}, {{m|la|bandum}}, from {{der|lad|frk|*ban}}, {{m|gmw-pro|*bann}}, from {{der|lad|gem-pro|*bannaną|t=to proclaim, command}}, from {{der|lad|ine-pro|*bʰeh₂-|t=to speak}}.
 
 ===Verb===
 {{lad-verb|heb=אבאנדונאר}}
