--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -14,6 +14,7 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 {{en-noun}}
 
 # A [[spherical]]ly [[contained]] [[volume]] of air or other gas, especially one made from [[soapy]] liquid.
+#: {{syn|en|bull|q1=obsolete}}
 #: {{ant|en|antibubble}}
 # A small spherical [[cavity]] in a solid material.
 #: {{ux|en|'''bubbles''' in window glass, or in a lens}}
@@ -52,9 +53,6 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 # A group of people who are in [[quarantine]] together.
 #* {{quote-journal|en|date=April 7, 2020|work=New Zealand Herald|title=Covid 19 coronavirus: Police called after Mt Eden landlord tries to move into flat during lockdown |author=|volume=|number=|passage="There was an empty room and this is my house," Mark Philip told the Herald. "Where am I supposed to go? Whose '''bubble''' am I supposed to infect?"}}
 # {{short for|en|travel bubble}}
-
-====Synonyms====
-* {{l|en|bull}} {{q|obsolete}}
 
 ====Derived terms====
 {{rel-top3|Terms derived from ''bubble'' (noun)}}
