# {{lb|en|television|slang}} A [[bulb]] or [[lamp]]; the part of a lighting assembly that actually produces the light. #* '''2013''', Gerald Millerson, ''Lighting for TV and Film'' (page 296) #*: A bare lamp (bulb, globe, ''''bubble'''') radiates light in all directions. <bubble#67578714>

--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -53,6 +53,9 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 # A group of people who are in [[quarantine]] together.
 #* {{quote-journal|en|date=April 7, 2020|work=New Zealand Herald|title=Covid 19 coronavirus: Police called after Mt Eden landlord tries to move into flat during lockdown |author=|volume=|number=|passage="There was an empty room and this is my house," Mark Philip told the Herald. "Where am I supposed to go? Whose '''bubble''' am I supposed to infect?"}}
 # {{short for|en|travel bubble}}
+# {{lb|en|television|slang}} A [[bulb]] or [[lamp]]; the part of a lighting assembly that actually produces the light.
+#* '''2013''', Gerald Millerson, ''Lighting for TV and Film'' (page 296)
+#*: A bare lamp (bulb, globe, ''''bubble'''') radiates light in all directions.
 
 ====Derived terms====
 {{rel-top3|Terms derived from ''bubble'' (noun)}}
