--- a/en/m/Maccabees.801819.wikitext
+++ b/en/m/Maccabees.801819.wikitext
@@ -24,6 +24,7 @@
 * Korean: {{t|ko|마카베오기}}
 * Portuguese: {{t|pt|Macabeus|m|m-p}}
 * Romanian: {{t|ro|Macabei}}
+* Spanish: {{t|es|Macabeos|m|m-p}}
 {{trans-bottom}}
 
 ===Noun===
