--- a/en/k/kaen.855484.wikitext
+++ b/en/k/kaen.855484.wikitext
@@ -26,3 +26,19 @@
 {{head|jv|determiner}}
 
 # {{label|jv|Cirebon}} [[yonder]]
+
+==Sarangani Manobo==
+
+===Etymology===
+From {{inh|mbs|poz-pro|*kaən}}.
+
+===Pronunciation===
+{{IPA|mbs|/kaən/}}
+
+===Verb===
+{{head|mbs|verb}}
+
+# to [[eat]]
+
+===References===
+* {{cite book |last=DuBois |first=Carl |year=2016 |title=Sarangani Manobo Dictionary |publisher=Summer Institute of Linguistics |url=https://www.sil.org/system/files/reapdata/13/92/31/139231769917087812275958932325476414175/mbsDIC_2016.pdf}}.
