--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -232,7 +232,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Iu Mien: {{tt|ium|dungz}}
 * Japanese: {{tt+|ja|豚|tr=ぶた, buta}}, {{tt+|ja|ブタ|tr=buta}}
 * Javanese: {{tt+|jv|ꦧꦧꦶ}}
-* Jeju: {{tt|jje|도새기|tr=dosaegi}}
+* Jeju: {{tt|jje|도새기}}
 * Jingpho: {{tt|kac|wa'}}
 * Kabardian: {{tt|kbd|кхъуэ}}
 * Kalmyk: {{t|xal|һаха}}
@@ -249,7 +249,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Kombio: {{tt|xbi|wurokn}}
 * Korean: {{tt+|ko|돼지}}
 * Krisa: {{tt|ksi|a}}
-* Kumyk: {{tt|kum|донгуз|tr=doñuz}}
+* Kumyk: {{tt|kum|донгуз}}
 * Kurdish:
 *: Central Kurdish: {{tt+|ckb|بەراز}}
 *: Northern Kurdish: {{tt+|kmr|beraz|m}}, {{tt+|kmr|xinzîr|m}}, {{tt+|kmr|xûk|m}}
@@ -440,7 +440,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Zazaki: {{tt+|zza|xoz}}, {{tt|zza|xenzir}}
 * Zhuang: {{tt|za|mou}}
 * Zou: {{t|zom|ui}}
-* Zulu: {{tt+|zu|ingulube|c9/10}}
+* Zulu: {{tt+|zu|ingulube|c9|c10}}
 {{trans-bottom}}
 
 {{trans-see|piglet}}
