--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -17,25 +17,24 @@ From {{inh|en|enm|consumen}}, from {{der|en|fro|consumer}}, from {{der|en|la|con
 {{en-verb}}
 
 # {{lb|en|transitive}} To [[use up]].
-#: ''The power plant '''consumes''' 30 tons of coal per hour.''
+#: {{ux|en|The power plant '''consumes''' 30 tons of coal per hour.}}
 # {{lb|en|transitive}} To [[eat]].
-#: ''Baby birds '''consume''' their own weight in food each day.''
+#: {{ux|en|Baby birds '''consume''' their own weight in food each day.}}
 #*{{quote-video game|en||developer={{w|BioWare}}|title={{w|Mass Effect: Andromeda}}|genre=[[science fiction|Science Fiction]]|location=Redwood City|publisher=Electronic Arts|year=2017|platform=PC|scene=Andromeda Wildlife: Overview Codex entry|oclc=1261299044|text=Concerns were raised around the ability of Milky Way species to '''consume''' proteins from Andromeda, so seed banks formed a significant part of the arks' cargo. We now know it is safe to '''consume''' food grown or hunted here, though enzyme supplements are recommended and have become a social norm at mealtimes.}}
 # {{lb|en|transitive}} To completely [[occupy]] the thoughts or attention of.
-#: ''Desire '''consumed''' him.''
+#: {{ux|en|Desire '''consumed''' him.}}
 # {{lb|en|transitive}} To [[destroy]] completely.
-#: ''The building was '''consumed''' by fire.''
+#: {{ux|en|The building was '''consumed''' by fire.}}
 #* {{RQ:Shakespeare Coriolanus|IV|vi|passage=If he were putting to my house the brand / That shall '''consume''' it.}}
 #* {{quote-book|en|year=1900|title=[[w:New Testament|The New Covenant Commonly Called the New Testament of Our Lord and Saviour Jesus Christ]]|location=New York|publisher=Thomas Nelson & Sons|series=[[w:American Standard Version|American Standard Version]]|section=[[w:Gospel of Matthew|Matthew]] [https://archive.org/stream/AmericanStandardVersionNewTestament1900#page/n20/mode/1up 6:19–20]|passage=Lay not up for yourselves treasures upon the earth, where moth and rust '''consume''', and where thieves break through and steal: but lay up for yourselves treasures in heaven, where neither moth nor rust doth '''consume''', and where thieves do not break through to steal: {{...}}}}
 # {{lb|en|intransitive|obsolete}} To [[waste away]] slowly.
 #* {{RQ:Shakespeare Much Ado About Nothing|III|i|passage=Therefore, let Benedick, like cover'd fire, / '''Consume''' away in sighs.}}
-#* '''1748''', {{w|Samuel Richardson}}, ''Clarissa'', Letter 441:
-#*: But, sir, you see how weak I am. You must see that I have been '''consuming''' from day to day {{...}}.
+#* {{RQ:Richardson Clarissa|passage=But, sir, you see how weak I am. You must see that I have been '''consuming''' from day to day {{...}}.|letter=441}}
 #* '''1899''', Kate Chopin, ''The Awakening'':
 #*: He assured her the child was '''consuming''' at that moment in the next room.
 # {{lb|en|economics|transitive|intransitive}} To [[trade]] [[money]] for [[good]] or [[service]]s as an [[individual]].
-#: ''In a materialistic society, individuals are taught to '''consume''', '''consume''', '''consume'''.''
-#: ''If you '''consume''' this product while in Japan, you may be subject to consumption tax.''
+#: {{ux|en|In a materialistic society, individuals are taught to '''consume''', '''consume''', '''consume'''.}}
+#: {{ux|en|If you '''consume''' this product while in Japan, you may be subject to consumption tax.}}
 # {{lb|en|transitive}} To [[absorb]] [[information]], especially through the [[mass media]].
 #: ''The Internet has changed the way we '''consume''' news.''
 
