--- a/en/h/hairnet.34110.wikitext
+++ b/en/h/hairnet.34110.wikitext
@@ -7,6 +7,7 @@ From {{com|en|hair|net}}. Compare {{cog|nl|haarnetje}}, {{cog|de|Haarnetz}}, {{c
 
 ===Pronunciation===
 * {{a|General American}} {{IPA|en|/ˈhɛɹˌnɛt/}}
+* {{audio|en|LL-Q1860 (eng)-Vealhurl-hairnet.wav|Audio (UK)}}
 * {{rhymes|en|ɛɹnɛt|s=2}}
 
 ===Noun===
