--- a/en/h/homodyne.775811.wikitext
+++ b/en/h/homodyne.775811.wikitext
@@ -14,7 +14,10 @@
 * {{l|en|synchrodyne}}
 
 ====Translations====
+{{trans-top}}
 * Italian: {{t+|it|omodina}}
+{{trans-mid}}
+{{trans-bottom}}
 
 ====See also====
 * {{pedialite|homodyne detection}}
