--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -14,16 +14,16 @@ Via {{der|en|fr|-}} from {{der|en|la|maximum}}.
 ===Noun===
 {{en-noun|maxima|s}}
 
-# The [[high|highest]] [[limit]]
+# The [[high|highest]] [[limit]].
 #* '''1806''', P. Colquhoun, ''A Treatise on Indigence''
 #*: This is the fundamental principle of good legislation. It is the art of conducting a nation to the '''maximum''' of happiness and the minimum of misery
-# {{lb|en|mathematics}} The [[great]]est [[value]] of a [[set]] or other mathematical structure, especially the [[global maximum]] or a [[local maximum]] of a [[function]]
-# {{lb|en|analysis}} An [[upper]] [[bound]] of a set which is also an element of that set
-# {{lb|en|statistics}} The largest value of a [[batch]] or [[sample]] or the upper bound of a [[probability distribution]]
-# {{lb|en|snooker}} A 147 break; the highest possible break
+# {{lb|en|mathematics}} The [[great]]est [[value]] of a [[set]] or other mathematical structure, especially the [[global maximum]] or a [[local maximum]] of a [[function]].
+# {{lb|en|analysis}} An [[upper]] [[bound]] of a set which is also an [[element]] of that set.
+# {{lb|en|statistics}} The largest [[value]] of a [[batch]] or [[sample]] or the [[upper]] [[bound]] of a [[probability distribution]].
+# {{lb|en|snooker}} A 147 [[break]]; the highest possible break.
 #: {{syn|en|147|maximum break}}
-# {{lb|en|colloquial|darts}} A [[score]] of [[180]] with three darts
-# {{lb|en|colloquial|cricket}} A scoring shot for 6 runs
+# {{lb|en|colloquial|darts}} A [[score]] of [[180]] with three [[dart]]s.
+# {{lb|en|colloquial|cricket}} A scoring [[shot]] for 6 [[run]]s.
 
 ====Usage notes====
 * {{m|en|maxima|Maxima}} is the more common plural, especially for the technical senses.
