t+ja:[[島]] ([[WT:EDIT|Assisted]]) <island#67658368>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -185,7 +185,7 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 * Irish: {{tt+|ga|oileán|m}}, {{tt|ga|inis|f}}
 * Isnag: {{tt|isd|puxo}}
 * Italian: {{tt+|it|isola|f}}
-* Japanese: {{tt+|ja|島|tr=しま, shima}}
+* Japanese: {{tt+|ja|島|tr=しま, shima}}, {{t+|ja|島|tr=とう, tō}} {{qualifier|suffix, also}}
 * Javanese: {{tt|jv|pulo}}
 * Jeju: {{tt|jje|섬}}
 * Kabuverdianu: {{tt|kea|ilha}}
