/* Swedish */ +Declension (no functional template exist) <CD#67666599>

--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -420,6 +420,16 @@ From {{bor|es|en|CD}}.
 # {{sv-noun-form-indef-pl|CD}}
 #:{{syn|sv|CD:ar}}
 
+====Declension====
+* {{q|singular indefinite nominative}} {{l-self|sv|CD}}
+* {{q|singular indefinite genitive}} {{l|sv|CD:s}}
+* {{q|singular definite nominative}} {{l|sv|CD:n}}
+* {{q|singular definite genitive}} {{l|sv|CD:ns}}
+* {{q|plural indefinite nominative}} {{l|sv|CD:ar}}; {{l-self|sv|CD}}
+* {{q|plural indefinite genitive}} {{l|sv|CD:s}}; {{l|sv|CD:ars}}
+* {{q|plural definite nominative}} {{l|sv|CD:arna}}; {{l|sv|CD:na}}
+* {{q|plural definite genitive}} {{l|sv|CD:arnas}}; {{l|sv|CD:nas}}
+
 ===References===
 * {{R:svenska.se|SO}}
 
