--- a/en/t/think through.720293.wikitext
+++ b/en/t/think through.720293.wikitext
@@ -4,6 +4,7 @@
 {{en-verb|think<,,thought> through}}
 
 # To fully [[consider]] an action, and understand all its [[consequence]]s.
+#* {{quote-book|en|year=2020|author=Cory Doctorow|authorlink=Cory Doctorow|title=Attack Surface|publisher=Tor Books|isbn=9781250757524|text=The fact that North America was the epicenter of the cataclysm, though acknowledged, has profound implications for our understanding of the human past that archaeologists have never '''thought through'''—in part because the scale of the cataclysm is only now beginning to be fully mapped out.}}
 
 ====Translations====
 {{trans-top|to fully consider an action}}
