t+ab:[[аԥслы]] ([[WT:EDIT|Assisted]]) <otter#67675091>

--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -38,6 +38,7 @@ Cognate with {{cog|stq|Otter}}, {{cog|nl|otter}}, {{cog|de|Otter}}, {{cog|sv|utt
 
 =====Translations=====
 {{trans-top|mammal}}
+* Abkhaz: {{t|ab|аԥслы}}
 * Albanian: {{t+|sq|lundërz|f}}, {{t+|sq|vidër|f}}, {{t+|sq|lundër|f}}
 * Algonquin: {{t|alq|nigig}}
 * Arabic: {{t|ar|ثَعْلَب الْمَاء|m}}
