Adding forms of [[vocatiu]] ([[WT:ACCEL|Accelerated]]) <vocatives#67676405>

--- a/en/v/vocatives.746822.wikitext
+++ b/en/v/vocatives.746822.wikitext
@@ -4,3 +4,12 @@
 {{head|en|noun form}}
 
 # {{plural of|en|vocative}}
+
+----
+
+==Catalan==
+
+===Adjective===
+{{head|ca|adjective form}}
+
+# {{feminine plural of|ca|vocatiu}}
