1978 book <summer resort#67762905>

--- a/en/s/summer resort.801743.wikitext
+++ b/en/s/summer resort.801743.wikitext
@@ -4,6 +4,23 @@
 {{en-noun}}
 
 # A [[resort]] visited for [[holiday]]s/[[vacation]]s during the summer.
+#* {{quote-book
+|en
+|year=1978
+|last=Nixon
+|first=Richard
+|authorlink=Richard Nixon
+|chapter=The Presidency 1969-1972
+|title=RN: the Memoirs of Richard Nixon
+|url=https://archive.org/details/rnmemoirsofricha00nixo/
+|publisher={{w|Grosset & Dunlap}}
+|ISBN=0-448-14374-7
+|LCCN=77-87793
+|OCLC=760525066
+|OL=7561812M
+|page=573
+|pageurl=https://archive.org/details/rnmemoirsofricha00nixo/page/573/
+|text=Hangchow is built around large lakes and gardens. In the days when the emperors used it as a '''summer resort''', it was known as the most beautiful city in China. I know that Mao enjoyed taking vacations there and staying in an exquisite old palace that had been turned into a government guesthouse.}}
 
 ====Derived terms====
 * {{l|en|summer resorter}}
