--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -41,8 +41,8 @@ Of {{der|en|trk|-}} origin; compare {{cog|tr|balkan||wooded mountain range}}.<re
 {{trans-top-also|geographical region in the southeast of Europe|Balkan Peninsula}}
 * Albanian: {{t|sq|Ballkan}}
 * Ancient Greek: {{t|grc|Χερσόνησος τοῦ Αἵμου|m|sc=polytonic}}
-* Arabic: {{t|ar|البَلْقَان|f}}
-*: Hijazi Arabic: {{t|acw|البَلْقَان|f|tr=al-balgān)}}
+* Arabic: {{t+|ar|الْبَلْقَان|f}}
+*: Hijazi Arabic: {{t|acw|الْبَلْقَان|f|tr=al-balgān)}}
 * Armenian: {{t+|hy|Բալկաններ}}
 * Asturian: {{t|ast|Balcanes|m}}
 * Azerbaijani: {{t|az|Balkanlar}}
