/* Alternative forms */ <island#67867192>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -5,8 +5,8 @@
 [[Image:CyprusFromTheISS.jpg|thumb|right|[[Cyprus]] island from space.]]
 
 ===Alternative forms===
-* {{l|en|iland}} {{qualifier|archaic}}
-* {{l|en|ylond}}, {{l|en|ylelond}}, {{l|en|yland}} {{qualifier|obsolete}}
+* {{alt|en|iland||obsolete}}
+* {{alt|en|ylond|ylelond|yland||obsolete}}<!-- These look rather like Middle English -->
 
 ===Etymology===
 From earlier {{m|en|iland}}, from {{inh|en|enm|iland}}, {{m|enm|yland}}, {{m|enm|ylond}}, from {{inh|en|ang|īeġland}}, from {{inh|en|gmw-pro|*auwjuland}}, from {{inh|en|gem-pro|*awjōlandą}} (from {{der|en|gem-pro|*awjō|t=island, waterland, meadow}}, from {{der|en|ine-pro|*h₂ekʷeh₂}}) + {{m|gem-pro|*landą|t=land}}, equivalent to {{af|en|ey|land}}.
