/* Verb */ # {{lb|en|ambitransitive|cooking}} Of [[chocolate]]: to change suddenly from a [[fluid]] to an undesirably [[hard]] and [[gritty]] [[texture]]. <seize#67935007>

--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -48,6 +48,7 @@ Earlier {{m|en|seise}}, from {{inh|en|enm|seisen}}, {{m|enm|sesen}}, {{m|enm|sai
 # {{lb|en|UK|intransitive}} To submit for consideration to a deliberative body.
 # {{lb|en|law}} (with ''[[of]]'') To cause (an action or matter) to be or remain before (a certain judge or court).
 #: ''This Court will remain '''seized''' of this matter.''
+# {{lb|en|ambitransitive|cooking}} Of [[chocolate]]: to change suddenly from a [[fluid]] to an undesirably [[hard]] and [[gritty]] [[texture]].
 
 ====Derived terms====
 {{der3
