t+yi:[[נאַרישעוואַטע]] ([[WT:EDIT|Assisted]]) <simple#67949341>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -224,7 +224,7 @@ Partially displaced native English {{m|en|onefold}}.
 *: Cyrillic: {{t|sh|простодушан}}
 *: Roman: {{t+|sh|prostodušan}}
 * Swedish: {{t+|sv|enkel}}
-* Yiddish: {{t|yi|תּמעוואַטע|tr=tamevate}}, {{t|yi|הינטערנאויוונדיק}}
+* Yiddish: {{t|yi|תּמעוואַטע|tr=tamevate}}, {{t|yi|הינטערנאויוונדיק}}, {{t|yi|נאַרישעוואַטע}}
 {{trans-bottom}}
 
 ===Noun===
