--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -164,7 +164,7 @@ From {{inh|en|enm|wesele}}, from {{inh|en|ang|weosule}}, from {{inh|en|gmw-pro|*
 * German: {{t+|de|Marder|m}}
 {{trans-mid}}
 * Japanese: {{t-needed|ja}}
-* Maori: {{t|mi|tori uaroa}}
+* Maori: {{t|mi|tori uaroa}}, {{t|mi|tori }}
 * Spanish: {{t+|es|comadreja|f}}
 * Walloon: {{t+|wa|bascolidî|m}}
 {{trans-bottom}}
