--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -121,7 +121,7 @@ Cognate with {{cog|stq|Otter}}, {{cog|nl|otter}}, {{cog|de|Otter}}, {{cog|sv|utt
 * Mon: {{t|mnw|ဖေံ}}
 * Mongolian: {{t|mn|халиг}}, {{t+|mn|халиу}}
 * Navajo: {{t|nv|tábąąstíín}}
-* Nepali: {{t|ne|उद्र }}
+* Nepali: {{t|ne|उद्र }}, {{t|ne|ओत}}
 * Northern Sami: {{t|se|čeavrris}}
 * Norwegian:
 *: Bokmål: {{t+|nb|oter|m}}
