--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -49,6 +49,7 @@ Abbreviation of various terms and phrases.
 # {{lb|en|chemistry|physics}} {{initialism of|en|circular dichroism}}
 # {{lb|en|immunology|biochemistry}} {{initialism of|en|cluster of differentiation}}
 # {{lb|en|video games}} {{abbreviation of|en|cooldown}}
+# {{lb|en|UK|law}} {{init of|en|controlled drug}}
 
 ====Derived terms====
 * {{sense|corps diplomatique}} {{l|en|CD plate}}
