t+pl:[[ujrzeć]] t-balance ([[WT:EDIT|Assisted]]) <behold#68361180>

--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -51,8 +51,8 @@ Rarely used in informal speech. The past participle [[beholden]] now has a meani
 * Hebrew: {{t+|he|הִנֵּה|tr=hiné|sc=Hebr}}, {{t+|he|הֲרֵי|tr=haréi}}
 * Hungarian: {{t+|hu|meglát}}, {{t+|hu|észrevesz}}, {{t+|hu|megpillant}}
 * Icelandic: {{t+|is|sjá}}
-{{trans-mid}}
 * Ido: {{t+|io|yen}}
+{{trans-mid}}
 * Indonesian: {{t+|id|lihat}}
 * Irish:
 *: Old Irish: {{t|sga|ad·cí}}
@@ -62,6 +62,7 @@ Rarely used in informal speech. The past participle [[beholden]] now has a meani
 * Macedonian: {{t|mk|гледа|sc=Cyrl}}, {{t|mk|следи|sc=Cyrl}}
 * Occitan: {{t|oc|lucar}}, {{t+|oc|véser}}, {{t+|oc|veire}}, {{t+|oc|agachar}}, {{t|oc|agaitar}}, {{t+|oc|espiar}}, {{t+|oc|mirar}}
 * Persian: {{t+|fa|نگریستن|tr=negaristan|sc=fa-Arab}}
+* Polish: {{t+|pl|ujrzeć|pf}}
 * Portuguese: {{t+|pt|ver}}, {{t+|pt|contemplar}}
 * Romanian: {{t+|ro|vedea}}
 * Russian: {{t+|ru|смотре́ть}}, {{t+|ru|гляде́ть}}, {{t+|ru|увидеть|pf}}, {{t+|ru|взглянуть|pf}}
