--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -35,9 +35,10 @@ From {{inh|id|ms|bahasa}}, from {{der|id|sa|भाषा||language}}.
 ===Pronunciation===
 * {{IPA|id|/baˈhasa/}}
 * {{hyph|id|ba|ha|sa}}
+* {{rhymes|id|sa|a|s=3}}
 
 ===Noun===
-{{id-noun|pl=bahasa-bahasa}}
+{{id-noun|pl=duplication}}
 
 # {{l|en|language}}:
 ## {{lb|id|linguistics}} a body of words, and set of methods of combining them (called a grammar), understood by a community and used as a form of communication.
