--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -56,6 +56,7 @@ From {{inh|en|enm|dudde|t=cloak, mantle, kind of cloth; ragged clothing or cloth
 
 {{trans-top|lottery ticket that does not give a payout}}
 * Danish: {{t|da|nitte|c}}
+* Dutch: {{t+|nl|niet|m}}
 * German: {{t+|de|Niete|f}}
 {{trans-mid}}
 * Norwegian:
