--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -38,7 +38,7 @@ From the [[homographic]] [[w:Grammatical case|case]] endings of the [[Appendix:G
 * {{l|en|maximum}}
 * {{l|en|medium}}
 * {{l|en|minimum}}
-* {{l|en|millenium}}
+* {{l|en|millennium}}
 * {{l|en|modicum}}
 * {{l|en|mortuarium}}
 * {{l|en|museum}}
