Reverted edits by [[Special:Contributions/2600:100B:B02B:235:96CE:7D5F:D578:9020|2600:100B:B02B:235:96CE:7D5F:D578:9020]]. If you think this rollback is in error, please leave a message on my [[User talk:Surjection|talk page]]. <-ica#68438427>

--- a/en/-/-ica.801322.wikitext
+++ b/en/-/-ica.801322.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-From {{bor|en|la|-ica}}, neuter plural of {{m|la|-icus}}
+From {{bor|en|la|-ica}}, neuter plural of {{m|la|-icus}}.
 
 Note that etymologically this is not {{m|en|-ic}} + {{m|la|-a||(plural ending)}}, as {{m|en|-ic}} is the English form, having dropped the {{m|la|-um}}, though adding an ''-a'' to an English word ending in ''-ic'' does produce a superficial etymologically.
 
