--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -105,6 +105,108 @@ From {{inh|en|enm|mylne}}, {{m|enm|mille}}, from {{inh|en|ang|mylen}}, from {{in
 |windmill
 |Woodhouse Mill
 }}
+{{der3|title=in toponyms of the United States|en
+|Advance Mills
+|Atkinson Mills
+|Aylett Mill
+|Bennetts Mill
+|Blodget Mills
+|Brooks Mill
+|Browns Mill 
+|Burlington Mills 
+|Burnt Mills
+|Clark Mills
+|Coopers Mills
+|Eakles Mills
+|Eden Mills
+|Ednas Mill
+|Eldridge Mill
+|Elk Mills
+|Etna Mills
+|Evans Mills
+|Falls Mills
+|Felts Mills
+|Fine Creek Mills
+|Fletcher Mill
+|Fort Kent Mills
+|Gang Mills
+|Garretts Mill 
+|Georges Mill 
+|Georges Mills
+|Gilmore Mills
+|Glebe Mills
+|Goods Mill
+|Great Mills
+|Guinea Mills
+|Guys Mills 
+|Henrys Mill
+|Hood's Mill
+|Howell Mills 
+|Kemp Mill
+|Kemps Mill
+|Klines Mill
+|Kyles Mills
+|Laniers Mill
+|Laurel Mills
+|Lawthorne Mill
+|Lees Mill 
+|Madison Mills
+|Marstons Mills
+|Massies Mill
+|McDonalds Mill
+|Midway Mills
+|Milford Mill
+|Mill Neck
+|Milton Mills
+|Moores Mill
+|Motleys Mill
+|Osceola Mills
+|Owings Mills
+|Parkins Mills
+|Peola Mills
+|Pine Grove Mills
+|Post Mills
+|Potomac Mills
+|Pounding Mill
+|Putneys Mill
+|Red Oaks Mill
+|Reedy Mill
+|Repton Mills
+|Ridings Mill
+|Rock Mills
+|Rolands Mill
+|Roses Mill
+|Salisbury Mills
+|Shack Mills
+|Shelors Mill 
+|Sheppards Mill 
+|Shirley Mills
+|Sirons Mill
+|Slate Mills
+|Smith Mills
+|Smyrna Mills
+|Spring Mills
+|Stony Creek Mills
+|Stony Mill 
+|Strodes Mills
+|Tacketts Mill 
+|Travis Mill 
+|Trenton Mills
+|Trents Mill 
+|Tunis Mills
+|Twymans Mill 
+|Union Mill 
+|Union Mills
+|Walker Mill
+|Walthall Mill
+|Washington Mills
+|Water Mill
+|Weston Mills
+|White Mills
+|Woods Mill 
+|Wye Mills
+|Yancey Mills
+}}
 
 =====Descendants=====
 * {{desc|srn|miri}}
