t+vi:[[hình tứ giác]] ([[WT:EDIT|Assisted]]) <quadrilateral#68440099>

--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -82,6 +82,7 @@ From {{der|en|la|quadrilaterus}}, {{m|en|quadri-||four}} + {{cog|la|laterālis||
 * Thai: {{t+|th|สี่เหลี่ยม}}
 * Turkish: {{t+|tr|dörtgen}}
 * Ukrainian: {{t|uk|чотирику́тник|m}}
+* Vietnamese: {{t|vi|hình tứ giác}}
 * Zazaki: {{t|zza|çehardag}}, {{t|zza|çardag}}
 {{trans-bottom}}
 
