--- a/en/d/dodgem.855185.wikitext
+++ b/en/d/dodgem.855185.wikitext
@@ -2,7 +2,7 @@
 [[File:H2199 Bumper Cars - Autorata C.JPG|thumb|right|'''dodgems''' in Finland]]
 
 ===Pronunciation===
-* {{a|UK}} {{IPA|en|/ˈdɒdʒ.əm/}}
+* {{a|UK}} {{IPA|en|/ˈdɒd͡ʒ.əm/}}
 
 ===Noun===
 {{en-noun}}
