--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -233,6 +233,7 @@ Related forms include {{cog|frm|rabouillet|t=baby rabbit}} and in {{cog|fr|rabot
 * Russian: {{t+|ru|кро́лик|m}}, {{t+|ru|крольчи́ха|f}}
 * S'gaw Karen: {{t|ksw|ပဒဲ}}
 * Samoan: {{t|sm|lapiti}}
+* Sangisari: {{t|sgr|خرقوش|tr=xarquš}}
 * Sanskrit: {{t+|sa|शशक}}, {{t+|sa|शश|m}}
 * Sardinian: {{t|scn|cunillu}}, {{t|scn|cacciappu}}
 * Scots: {{t|sco|kinnen}}
