--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -27,7 +27,7 @@ From {{der|en|enm|bidden}}, from {{der|en|ang|-}} {{m|ang|biddan||to ask, demand
 =====Usage notes=====
 The inflected forms {{m|en|bade}}, {{m|en|bad}}, and {{m|en|bidden}} are falling out of use. ''Bade'' remains common in greetings, as in “bade farewell”, but uninflected ''bid'' is perhaps more common, and {{m|en||bidden}} is especially rare.<ref>“[http://grammarist.com/usage/bid-bade-bidden/ Bid, bade, bidden]”, ''Grammarist''</ref>
 
-When ''bidden'' does occur, it is usually in an elevated, ironical, or metaphorical style, e.g "I have ''bidden'' farewell to my prospects of promotion."
+When ''bidden'' does occur, it is usually in an elevated, ironical, or metaphorical style, e.g. "I have ''bidden'' farewell to my prospects of promotion."
 
 When ''bade'' (spelled ''bad'' so rarely that this variant is not mentioned in most dictionaries) is used in formal speech, the pronunciation {{IPAchar|/bæd/}} may be heard. However, when a dated text with the spelling ''bade'' is read aloud or recited (e.g. on stage, in school, or in church, etc.) the [[spelling pronunciation]] {{IPAchar|/beɪd/}} is quite usual.{{rfv-pron|en}}
 
