--- a/en/p/public school.34050.wikitext
+++ b/en/p/public school.34050.wikitext
@@ -33,7 +33,7 @@ From {{m|en|public}} (originally, "[[communal]]" and contrasted with [[personal]
 #*: Ile haue them fill the '''publike schooles''' with skill. Wherewith the students shal be brauely clad.
 #* '''1651''', [[w:Thomas Hobbes|Thomas Hobbes]], ''Leviathan'', iv.xlvi.370
 #*: That which is now called an University, is a Joyning together, and an Incorporation under one Government of many '''Publique Schools''', in one and the same Town or City.
-# {{lb|en|North America|Australia|New Zealand|South Africa|formerly [[Scottish English|Scottish]]}} A [[public]]ly [[fund]]ed and [[administer]]ed [[school]]; {{lb|en|UK|Ireland}} such [[school]]s in the context of [[other]] [[countries]]
+# {{lb|en|North America|Australia|New Zealand|South Africa|Philippines|formerly [[Scottish English|Scottish]]}} A [[public]]ly [[fund]]ed and [[administer]]ed [[school]]; {{lb|en|UK|Ireland}} such [[school]]s in the context of [[other]] [[countries]]
 #* '''1636''', ''Harvard College Records'' (1925), I.171
 #*: The Court voted for the erecting a '''Publick Schooll''' or Colledge in Cambridge.
 #* '''1683''', ''Pennsylvania Frame of Government'', §10
