--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -254,6 +254,21 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan|t=to bleed}}, from {{inh|e
 
 ----
 
+==East Central German==
+
+===Etymology===
+From {{inh|de|gmh|blöde|blode}}, from {{inh|de|goh|blōdi}}, from {{inh|de|gem-pro|*blauþijaz}}, {{m|gem-pro|*blauþaz||weak, soft, timid}}. Cognate with {{cog|en|blöd}}.
+
+===Adjective===
+{{head|gmw-ecg|adjective}}
+
+# {{lb|gmw-ecg|Erzgebirgisch}} [[stupid]], [[dim-witted]]
+
+===References===
+* {{R:gmw-ecg:Heidler|24}}
+
+----
+
 ==Plautdietsch==
 
 ===Adjective===
