/* Derived terms */ <mill#68462228>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -106,41 +106,63 @@ From {{inh|en|enm|mylne}}, {{m|enm|mille}}, from {{inh|en|ang|mylen}}, from {{in
 |Woodhouse Mill
 }}
 {{der3|title=in toponyms of the United States|en
+|Adams Mills
 |Advance Mills
 |Allens Mills
+|Armstrongs Mills
+|Arnco Mills
+|Arnold Mill
 |Atkinson Mills
+|Austins Mill
 |Aylett Mill
+|Baileys Mills
 |Balls Mills
+|Barrs Mills
+|Beards Mill
+|Beaver Mills
 |Bells Mills
 |Bennetts Mill
 |Blairs Mills
 |Blodget Mills
+|Bowens Mill
 |Brooks Mill
 |Browns Mill 
 |Buffalo Mills
+|Bumpus Mills
 |Burlington Mills 
 |Burnt Mills
+|Carpenter's Mill
+|Cedar Mills
 |Clark Mills
 |Clarks Mills
+|Coles Mills
+|Cones Mills
 |Coopers Mills
+|Crockett Mills
 |Cuba Mills
 |Detters Mill
+|Dixons Mills
+|Eagle Mills
 |Eakles Mills
 |Eden Mills
 |Ednas Mill
 |Eldridge Mill
+|Electric Mills
 |Elk Mills
 |Etna Mills
 |Eureka Mill
 |Evans Mills
 |Falls Mills
 |Felts Mills
+|Fickling Mill
 |Fine Creek Mills
 |Fletcher Mill
 |Fort Kent Mills
+|Foster Mills
 |Fuhrmans Mill
 |Gang Mills
 |Garretts Mill
+|Gates Mills
 |Gayle Mill
 |Georges Mill 
 |Georges Mills
@@ -152,16 +174,24 @@ From {{inh|en|enm|mylne}}, {{m|enm|mille}}, from {{inh|en|ang|mylen}}, from {{in
 |Guinea Mills
 |Gulph Mills
 |Guys Mills 
+|Hannahs Mill
+|Harrison Mills
+|Hasslers Mill
 |Henrys Mill
+|Holmes Mill
 |Hood's Mill
 |Hope Mills
+|Hopewell Mill
 |Howell Mills
 |Huntington Mills
+|Hurricane Mills
 |Hurdle Mills
 |Inman Mills
+|Jasper Mills
 |Jersey Mills
 |Kemp Mill
 |Kemps Mill
+|Kings Mills
 |Klines Mill
 |Kyles Mills
 |Lancaster Mill
@@ -172,9 +202,14 @@ From {{inh|en|enm|mylne}}, {{m|enm|mille}}, from {{inh|en|ang|mylen}}, from {{in
 |Lawthorne Mill
 |Lecontes Mills
 |Lees Mill 
+|Lillard Mill
+|Linton Mills
+|Lusby's Mill
 |Luthers Mills
 |Madison Mills
+|Marquand Mills
 |Marstons Mills
+|Martin's Mills
 |Massies Mill
 |McDonalds Mill
 |McGees Mills
@@ -187,29 +222,41 @@ From {{inh|en|enm|mylne}}, {{m|enm|mille}}, from {{inh|en|ang|mylen}}, from {{in
 |Mill Spring
 |Milton Mills
 |Monarch Mill
+|Monroe Mills
 |Moores Mill
+|Moscow Mills
+|Moshers Mill
 |Motleys Mill
+|Mountain Mills
+|Muses Mills
 |Oakland Mills
 |Osceola Mills
 |Owings Mills
 |Parkins Mills
+|Patten Mills
 |Peola Mills
 |Pine Grove Mills
 |Post Mills
 |Potomac Mills
 |Potters Mills
 |Pounding Mill
+|Prices Mill
 |Putneys Mill
 |Red Oaks Mill
 |Reedy Mill
+|Reeds Mill
 |Repton Mills
 |Ridings Mill
+|Rinard Mills
+|Rix Mills
 |Rochester Mills
 |Rock Mills
 |Rolands Mill
 |Roses Mill
+|Ruddels Mills
 |Salisbury Mills
 |Scarlets Mill
+|Scotts Mill
 |Shack Mills
 |Shelors Mill 
 |Sheppards Mill 
@@ -222,11 +269,15 @@ From {{inh|en|enm|mylne}}, {{m|enm|mille}}, from {{inh|en|ang|mylen}}, from {{in
 |Sprankle Mills
 |Spring Mill
 |Spring Mills
+|Star Mills
+|Starrs Mill
+|Steam Mill
 |Stony Creek Mills
 |Stony Mill 
 |Strodes Mills
 |Summit Mills
 |Tacketts Mill 
+|Taylor Mill
 |Travis Mill 
 |Trenton Mills
 |Trents Mill 
@@ -234,6 +285,8 @@ From {{inh|en|enm|mylne}}, {{m|enm|mille}}, from {{inh|en|ang|mylen}}, from {{in
 |Twymans Mill 
 |Union Mill 
 |Union Mills
+|Vales Mills
+|Wallace Mills
 |Walker Mill
 |Walthall Mill
 |Washington Mills
@@ -243,8 +296,10 @@ From {{inh|en|enm|mylne}}, {{m|enm|mille}}, from {{inh|en|ang|mylen}}, from {{in
 |White Mills
 |Wilson's Mills
 |Winnsboro Mills
+|Woodland Mills
 |Woods Mill 
 |Wye Mills
+|Wynns Mill
 |Yancey Mills
 |Yeakle Mill
 }}
