/* Derived terms */ <mill#68462706>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -116,14 +116,21 @@ From {{inh|en|enm|mylne}}, {{m|enm|mille}}, from {{inh|en|ang|mylen}}, from {{in
 |Austins Mill
 |Aylett Mill
 |Baileys Mills
+|Baldwins Mill
 |Balls Mills
+|Banner Mills
+|Barre Mills
 |Barrs Mills
+|Bay Mills
 |Beards Mill
 |Beaver Mills
+|Becks Mill
 |Bells Mills
 |Bennetts Mill
+|Blackiston Mill
 |Blairs Mills
 |Blodget Mills
+|Bonenyville Mills
 |Bowens Mill
 |Brooks Mill
 |Browns Mill 
@@ -131,8 +138,10 @@ From {{inh|en|enm|mylne}}, {{m|enm|mille}}, from {{inh|en|ang|mylen}}, from {{in
 |Bumpus Mills
 |Burlington Mills 
 |Burnt Mills
+|Cagle Mill
 |Carpenter's Mill
 |Cedar Mills
+|Charter Oak Mills
 |Clark Mills
 |Clarks Mills
 |Coles Mills
@@ -140,11 +149,16 @@ From {{inh|en|enm|mylne}}, {{m|enm|mille}}, from {{inh|en|ang|mylen}}, from {{in
 |Coopers Mills
 |Crockett Mills
 |Cuba Mills
+|Deer's Mill
+|Delhi Mills
 |Detters Mill
 |Dixons Mills
+|Doolittle Mills
+|Dunn Mill
 |Eagle Mills
 |Eakles Mills
 |Eden Mills
+|Edna Mills
 |Ednas Mill
 |Eldridge Mill
 |Electric Mills
@@ -164,6 +178,7 @@ From {{inh|en|enm|mylne}}, {{m|enm|mille}}, from {{inh|en|ang|mylen}}, from {{in
 |Garretts Mill
 |Gates Mills
 |Gayle Mill
+|Gays Mills
 |Georges Mill 
 |Georges Mills
 |Gilmore Mills
@@ -171,18 +186,23 @@ From {{inh|en|enm|mylne}}, {{m|enm|mille}}, from {{inh|en|ang|mylen}}, from {{in
 |Glen Mills
 |Goods Mill
 |Great Mills
+|Greenfield Mills
 |Guinea Mills
 |Gulph Mills
 |Guys Mills 
 |Hannahs Mill
 |Harrison Mills
 |Hasslers Mill
+|Heath Mills
 |Henrys Mill
 |Holmes Mill
 |Hood's Mill
+|Hoopers Mill
+|Hoover Mill
 |Hope Mills
 |Hopewell Mill
 |Howell Mills
+|Hudson Mills
 |Huntington Mills
 |Hurricane Mills
 |Hurdle Mills
@@ -193,7 +213,10 @@ From {{inh|en|enm|mylne}}, {{m|enm|mille}}, from {{inh|en|ang|mylen}}, from {{in
 |Kemps Mill
 |Kings Mills
 |Klines Mill
+|Knox Mills
 |Kyles Mills
+|Lake Mill
+|Lake Mills
 |Lancaster Mill
 |Lanes Mills
 |Laniers Mill
@@ -201,12 +224,16 @@ From {{inh|en|enm|mylne}}, {{m|enm|mille}}, from {{inh|en|ang|mylen}}, from {{in
 |Laurel Mills
 |Lawthorne Mill
 |Lecontes Mills
-|Lees Mill 
+|Lees Mill
+|Liberty Mills 
 |Lillard Mill
 |Linton Mills
+|Loddes Mill
 |Lusby's Mill
+|Lusks Mills
 |Luthers Mills
 |Madison Mills
+|Marion Mills
 |Marquand Mills
 |Marstons Mills
 |Martin's Mills
@@ -229,13 +256,19 @@ From {{inh|en|enm|mylne}}, {{m|enm|mille}}, from {{inh|en|ang|mylen}}, from {{in
 |Motleys Mill
 |Mountain Mills
 |Muses Mills
+|Nevada Mills
 |Oakland Mills
+|Orange Mill
 |Osceola Mills
 |Owings Mills
 |Parkins Mills
 |Patten Mills
 |Peola Mills
 |Pine Grove Mills
+|Pleasant Mills
+|Pond Creek Mills
+|Porter's Mills
+|Portland Mills
 |Post Mills
 |Potomac Mills
 |Potters Mills
@@ -245,6 +278,7 @@ From {{inh|en|enm|mylne}}, {{m|enm|mille}}, from {{inh|en|ang|mylen}}, from {{in
 |Red Oaks Mill
 |Reedy Mill
 |Reeds Mill
+|Reifs Mills
 |Repton Mills
 |Ridings Mill
 |Rinard Mills
@@ -269,15 +303,18 @@ From {{inh|en|enm|mylne}}, {{m|enm|mille}}, from {{inh|en|ang|mylen}}, from {{in
 |Sprankle Mills
 |Spring Mill
 |Spring Mills
+|Star Mill
 |Star Mills
 |Starrs Mill
 |Steam Mill
+|Stone Quarry Mills
 |Stony Creek Mills
 |Stony Mill 
 |Strodes Mills
 |Summit Mills
 |Tacketts Mill 
 |Taylor Mill
+|Tisch Mills
 |Travis Mill 
 |Trenton Mills
 |Trents Mill 
@@ -291,6 +328,7 @@ From {{inh|en|enm|mylne}}, {{m|enm|mille}}, from {{inh|en|ang|mylen}}, from {{in
 |Walthall Mill
 |Washington Mills
 |Water Mill
+|Waterford Mills
 |Watts Mills
 |Weston Mills
 |White Mills
