/* Derived terms */ <mill#68464889>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -106,31 +106,61 @@ From {{inh|en|enm|mylne}}, {{m|enm|mille}}, from {{inh|en|ang|mylen}}, from {{in
 |Woodhouse Mill
 }}
 {{der3|title=in toponyms of Canada|en
+|Algoma Mills
+|Allan Mills
+|Anten Mills
+|Armstrong Mills
+|Ashby Mills
 |Balmoral Mills
 |Batemans Mills
 |Bay du Vin Mills
+|Bellamys Mill
 |Bells Mills
 |Berry Mills
+|Birge Mills
 |Brewers Mills
 |Cails Mills
 |Caledonia Mills
 |Camerons Mill
+|Cedar Mills
 |Coates Mills
 |Conns Mills
 |Conquerall Mills
+|Cooks Mills
+|Dalhousie Mills
 |Davis Mill
+|Davis Mills
+|Dawn Mills
 |Densmore Mills
+|Don Mills
+|Eden Mills
+|Edys Mills
+|Erin Mills
+|Feir Mill
 |Fords Mills
 |Fowlies Mill
 |Frasers Mills
+|German Mills
 |Goodwin Mill
 |Grays Mills
 |Grey Mills
+|Halls Mills
+|Hampshire Mills
 |Harmony Mills
+|Harrison Mills
+|Hempstock Mill
+|Herron's Mills
+|Horning's Mills
+|Imperial Mills
 |Jewetts Mills
 |Killams Mills
+|La Rue Mills
+|Links Mills
 |Liscomb Mills
 |Lockharts Mill
+|Longford Mills
+|Lords Mills
+|Lueck Mill
 |MacIntosh Mill
 |Mavis Mills
 |McKees Mills
@@ -139,10 +169,17 @@ From {{inh|en|enm|mylne}}, {{m|enm|mille}}, from {{inh|en|ang|mylen}}, from {{in
 |Mill Road
 |Mill Settlement
 |Mill Village
+|Mississippi Mills
+|Moiles Mills
+|Mono Mills
+|National Mills
 |New Mills
 |Newton Mills
+|Old Mill
+|Oxford Mills
 |Pelletiers Mill
 |Peters Mills
+|Rock Mills
 |Sheffield Mills
 |Steeves Mills
 |Tay Mills
@@ -151,6 +188,8 @@ From {{inh|en|enm|mylne}}, {{m|enm|mille}}, from {{inh|en|ang|mylen}}, from {{in
 |Vernon Mills
 |Whites Mills
 |Wiggins Mill
+|Yonge Mills
+|York Mills
 }}
 {{der3|title=in toponyms of the United States|en
 |Adams Mills
