t+ml:[[ചൂളം ]] ([[WT:EDIT|Assisted]]) <whistle#68469394>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -220,6 +220,7 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * Latvian: {{t|lv|svilpiens|m}}
 * Lithuanian: {{t|lt|švilpimas|m}}
 * Malay: {{t|ms|siulan}}
+* Malayalam: {{t+|ml|ചൂളം }}
 * Polish: {{t+|pl|gwizd|m}}
 * Portuguese: {{t+|pt|apito|m}}, {{t+|pt|assobio|m}}, {{t+|pt|assovio|m}}
 * Romanian: {{t+|ro|fluierat|n}}
