--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -158,7 +158,7 @@ From {{der|de|la|-um}}.
 # {{ngd|Generally unproductive suffix found in neuter nouns of Latin origin.}}
 
 ===Etymology 2===
-As a variant of {{m|de|-heim}} through reduction to {{IPAchar|[əm]}} and subsequent backing. Compare {{m|de|-em}}. This is the only origin in most areas and the preceding consonant is usually a [[velar]]. Along the North Sea coast, where the suffix is most frequent, it sometimes goes back to {{der|de|ofs|-em|-em, -um|pos=dative plural ending}}, equivalent to {{m+|de|-en}} as in {{m|de|-hausen}}. Distinguishing both origins is often impossible, however.
+As a variant of {{m|de|-heim}} through reduction to {{IPAchar|[əm]}} and subsequent backing. Compare {{m|de|-em}}. This is the only origin in most areas, but along the North Sea coast, where the suffix is most frequent, it sometimes goes back to {{der|de|ofs|-em|-em, -um|pos=dative plural ending}}, equivalent to {{m+|de|-en}} as in {{m|de|-hausen}}. Distinguishing both origins is often impossible, however.
 
 ====Suffix====
 {{head|de|suffix}}
@@ -166,7 +166,7 @@ As a variant of {{m|de|-heim}} through reduction to {{IPAchar|[əm]}} and subseq
 # {{ngd|A placename suffix, often an}} {{alternative form of|de|-heim|nocap=1}}.
 
 =====Derived terms=====
-{{col4|de|Bachum|Baltrum|Berum|Bochum|Bordelum|Borkum|Breklum|Brinkum|Büsum|Critzum|Dersum|Ditzum|Dornum|Hatzum|Horum|Husum|Filsum|Jemgum|Midlum|Ochtersum|Pelkum|Petkum|Risum|Stockum|Süderlügum|Sustrum|Walchum|Wankum|Werdum|Wirdum}}
+{{col4|de|Bachum|Baltrum|Berum|Bochum|Bordelum|Borkum|Bornum|Breklum|Brinkum|Büsum|Critzum|Dersum|Ditzum|Dornum|Filsum|Königsdahlum|Hatzum|Horum|Husum|Jemgum|Mahlum|Midlum|Ochtersum|Pelkum|Petkum|Risum|Stockum|Süderlügum|Sustrum|Walchum|Wankum|Werdum|Wirdum}}
 
 ----
 
