--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -166,7 +166,7 @@ As a variant of {{m|de|-heim}} through reduction to {{IPAchar|[əm]}} and subseq
 # {{ngd|A placename suffix, often an}} {{alternative form of|de|-heim|nocap=1}}.
 
 =====Derived terms=====
-{{col4|de|Bachum|Baltrum|Berum|Bochum|Bordelum|Borkum|Bornum|Breklum|Brinkum|Büsum|Critzum|Dersum|Ditzum|Dornum|Filsum|Königsdahlum|Hatzum|Horum|Husum|Jemgum|Mahlum|Midlum|Ochtersum|Pelkum|Petkum|Risum|Stockum|Süderlügum|Sustrum|Walchum|Wankum|Werdum|Wirdum}}
+{{col4|de|Bachum|Baltrum|Berum|Bochum|Bordelum|Borkum|Bornum|Breklum|Brinkum|Büsum|Critzum|Dersum|Ditzum|Dornum|Filsum|Königsdahlum|Hatzum|Horum|Holsthum|Husum|Jemgum|Mahlum|Midlum|Ochtersum|Pelkum|Petkum|Risum|Stockum|Süderlügum|Sustrum|Walchum|Wankum|Werdum|Wirdum}}
 
 ----
 
