t+cy:[[damcaniaeth]] t-balance ([[WT:EDIT|Assisted]]) <theory#68472857>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -151,9 +151,9 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * Khmer: {{t+|km|ទ្រឹស្ដី}}
 * Korean: {{t+|ko|이론(理論)}}, {{t+|ko|리론(理論)}} {{qualifier|North Korea}}, {{t+|ko|학설(學說)}}
 * Kyrgyz: {{t+|ky|теория}}
-{{trans-mid}}
 * Lao: {{t+|lo|ທິດສະດີ}}
 * Latvian: {{t|lv|teorija|f}}
+{{trans-mid}}
 * Lithuanian: {{t|lt|teorija|f}}
 * Macedonian: {{t|mk|теорија|f}}
 * Malay: {{t+|ms|teori}}
@@ -191,6 +191,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * Uzbek: {{t+|uz|nazariya}}, {{t+|uz|teoriya}}
 * Vietnamese: {{t+|vi|lý thuyết}}, {{t+|vi|lý luận}}, {{t+|vi|học thuyết}}
 * Volapük: {{t+|vo|teorod}}
+* Welsh: {{t|cy|damcaniaeth|f}}
 * Yiddish: {{t|yi|טעאָריע|f}}
 {{trans-bottom}}
 
@@ -254,8 +255,8 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * Irish: {{t|ga|teoiric|f}}
 * Italian: {{t+|it|teoria|f}}
 * Japanese: {{t+|ja|定理|tr=ていり, teiri}}, {{t+|ja|理論|tr=りろん, riron}}, {{t+|ja|学説|tr=がくせつ, gakusetsu}}
-{{trans-mid}}
 * Macedonian: {{t|mk|теорија|f}}
+{{trans-mid}}
 * Malay: {{t+|ms|teori}}
 * Maltese: {{t|mt|teorija}}
 * Mongolian: {{t+|mn|онол}}
@@ -273,6 +274,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * Swedish: {{t+|sv|teori|c}}
 * Tagalog: {{t|tl|huna}}
 * Turkish: {{t+|tr|kuram}}, {{t+|tr|nazariye}} {{qualifier|obsolecent}}, {{t+|tr|teori}}
+* Welsh: {{t|cy|damcaniaeth|f}}
 {{trans-bottom}}
 
 {{trans-top|in logic: a set of axioms and all statements derivable from them}}
@@ -288,9 +290,9 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * Japanese: {{t+|ja|定理|tr=ていり, teiri}}
 * Macedonian: {{t|mk|теорија|f}}
 * Malay: {{t+|ms|teori}}
-{{trans-mid}}
 * Norwegian:
 *: Bokmål: {{t|nb|teori|m}}
+{{trans-mid}}
 * Polish: {{t+|pl|teoria|f}}
 * Portuguese: {{t+|pt|teoria|f}}
 * Romanian: {{t|ro|teorii|p}}
@@ -301,6 +303,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * Spanish: {{t+|es|teoría|f}}
 * Swedish: {{t+|sv|teori|c}}
 * Turkish: {{t+|tr|kuram}}, {{t+|tr|teori}}
+* Welsh: {{t|cy|damcaniaeth|f}}
 {{trans-bottom}}
 
 {{checktrans-top}}
