--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Pronunciation===
-* {{IPA|en|/ˈsexo/}}
+* {{IPA|en|/ˈbɛt/}}
 * {{audio|en|en-us-bet.ogg|Audio (US)}}
 * {{rhymes|en|ɛt|s=1}}
 
